--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title>Cassie S. Triche</title>
+       <title>Triche</title>
     </head>
     <body>
+      Cierra Rene Triche-Thomas
     </body>
 </html>
